# triads

./: Cargo.toml  README.org  list  slurm_taurus_srun.sh  triads.org
benches/: ac_bench.rs
data/: arms12  arms13  arms14  arms16  arms18  arms4  arms6  arms7  arms9  commutative_10,00,0  commutative_10001111,0101111,010000  commutative_10110000,0101111,10011  cores_length5  cores_nodes11  cores_nodes13  cores_nodes15  cores_nodes17  cores_nodes8  cores_nodes9  pairs_length4  pairs_length5  pairs_length8  pairs_nodes10  pairs_nodes12  pairs_nodes13  pairs_nodes14  pairs_nodes16  pairs_nodes17  pairs_nodes18  pairs_nodes7  pairs_nodes8
data/arms/: arms10  arms11  arms15  arms17  arms5  arms8
data/length/: cores_4  cores_5  cores_6  cores_length4  cores_length6  cores_length7  pairs_length1  pairs_length2  pairs_length3  pairs_length6  pairs_length7  pairs_length9  triads
data/nodes/: commutative_11.csv  commutative_11.csv.idx  commutative_12.csv  commutative_13.csv  cores_10  cores_11  cores_12  cores_13  cores_14  cores_15  cores_16  cores_17  cores_18  cores_19  cores_20  cores_21  cores_nodes10  cores_nodes11  cores_nodes12  cores_nodes13  cores_nodes14  cores_nodes16  cores_nodes18  cores_nodes19  cores_nodes20  cores_nodes21  cores_nodes8  cores_nodes9  pairs_1  pairs_11  pairs_14  pairs_15  pairs_16  pairs_17  pairs_18  pairs_19  pairs_2  pairs_20  pairs_21  pairs_3  (+18 more)
scripts/: print_graph.sh
src/: adjacency_list.rs  arc_consistency.rs  configuration.rs  consistency.rs  core_triads.rs  cores.rs  lib.rs  main.rs  metrics.rs  polymorphism.rs  triad.rs  triads.rs
(+39 files in other folders)
