[package]
name = "triads"
version = "0.1.0"
authors = ["Michael Wernthaler <michael.wernthaler@posteo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
criterion = "0.3"
clap = "2.33.0"

[[bench]]
name = "ac_bench"
harness = false
